2006-07-05  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/scaledfont.cc:
	* cairomm/scaledfont.h: create(): Make the font_matrix and ctm 
	parameters const (they are now const in the C API too). Maybe the font 
	parameter should be const, but maybe there is a reason that it is not 
	const in the C API. Pass FontOptions by const reference instead of 
	by value.
	glyph_extents(): Pass the vector by const reference instead of by 
	value.
	I would prefere to make all the extents() functions use return values 
	instead of output parameters, but I suppose this might be slightly 
	less efficient in some circumstances.

2006-07-05  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/cairomm.h:
	* cairomm/context.h:
	* cairomm/path.h:
	* cairomm/scaledfont.h:
	* cairomm/surface.h:
	* cairomm/win32_surface.h:
	* cairomm/xlib_surface.h: Use @ instead of \ for doxygen 
	commands, to be consistent with gtkmm, which uses it because it is the 
	same as JavaDoc, with which some people are already familiar.

2006-07-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* Makefile.am: add ability to do snapshot releases to the
	cairographics.org/snapshots/ directory in addition to official releases
	* configure.in: bumped the revision to 1.1.10 in preparation for a snapshot
	release of the 1.2 API
	* docs/reference/Makefile.am: fixed some distcheck errors

2006-07-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* .cvsignore, cairomm/.cvsignore: ignore some autotools files and *.swp
	files (from vim)

2006-07-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/scaledfont.cc, cairomm/scaledfont.h: wrap ScaledFont, including
	new API for cairo 1.2
	* cairomm/Makefile.am: add scaledfont.* to list of sources

2006-07-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/surface.h: Remove comments stating that PDF, PS, and SVG are
	experimental surfaces.  As of 1.2.0, these three surfaces are officially
	supported by the cairo library.
